--- a/index.css
+++ b/index.css
@@ -3,7 +3,8 @@
 :root {
 	--white: #ffffff;
 	--off-white: #f5f5f5;
-	--off-black: #0f0f0f;
+	--off-black: #1f1f1f;
+	--gray: #545454;
 	--black: #000000;
 	--font: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -11,10 +12,11 @@
 /* Reset */
 
 * {
-	font-family: var(--font);
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	font-family: var(--font);
+	color: var(--black);
 }
 
 body {
@@ -23,4 +25,46 @@ body {
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
+}
+
+header {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	background-color: var(--off-white);
+}
+
+.app__navbar {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	max-width: 1024px;
+	margin: 0 auto;
+}
+
+.app__navbar__title {
+	margin: 1em;
+}
+
+.app__navbar__menu {
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+	margin: 1em;
+}
+
+.app__navbar__menu__item {
+	list-style-type: none;
+	margin-left: 1em;
+	padding-bottom: 0.2em;
+}
+
+.app__navbar__menu__item:hover,
+.app__navbar__menu__item:focus {
+	cursor: pointer;
+}
+
+.active {
+	border-bottom: 1px solid var(--off-black);
 }
