added box shadow

--- a/index.css
+++ b/index.css
@@ -37,6 +37,7 @@ header {
 	left: 0;
 	width: 100%;
 	background-color: var(--off-white);
+	box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .app__navbar {
@@ -89,6 +90,7 @@ a {
 	background-color: var(--off-white);
 	min-width: 300px;
 	min-height: 150px;
+	box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .app__body button {
