--- a/index.css
+++ b/index.css
@@ -81,15 +81,16 @@ a {
 /* Main */
 
 .app__body {
+	margin-top: 5em;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
 	gap: 1em;
-	background-color: var(--off-white);
 	min-width: 300px;
 	min-height: 150px;
+	background-color: var(--off-white);
 	box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
 }
 
